fix instrument list text align

--- a/src/styles/sass/5-modules/_instrumentList.scss
+++ b/src/styles/sass/5-modules/_instrumentList.scss
@@ -5,6 +5,7 @@
 
     @include media-query(tablet-portrait-up) {
         margin-left: 3vw;
+        text-align: left;
         width: 8em;
     }
 
